Resources/public/css/editor.css
body.toolkit {
    /*padding: 40px 4px;*/
    padding-bottom: 40px;
}

.modal-dialog {
    width: 70%;
}

#add-block-modal .single-block-button {
    border: 1px solid #eee;
    color: #333;
    display: inline-block;
    font-size: 16px;
    margin: 10px;
    padding: 10px;
    text-align: center;
    text-transform: uppercase;
    width: 22%;
}

#add-block-modal .single-block-button:hover {
    color: #FFFFFF;
    background: #333333;
}

#add-block-modal .single-block-button.selected {
    border: 1px solid #C00;
    box-shadow: 0 0 10px 1px #C00;
}

#add-block-modal .single-block-button .widget-icon {
    font-size: 52px;
}

#add-block-modal .single-block-button .widget-label {
    display: block;
    margin-top: 6px;
}

.ui-sortable-helper {
    box-shadow: 0 0 3px 1px #777;
}

.eight-is-sorting .eight-block-decorator {
    border: solid 2px #B8C6ED;
}


@media(max-width: 1024px) {
    .modal-dialog {
        width: 100%;
        margin: 0;
    }

    #add-block-modal .single-block-button {
        width: 42%;
    }
}

#btn-edit-layout-mode {
    left: 10px;
    position: fixed;
    top: 10px;
    z-index: 2147483647;
    opacity: 0.2;
    background: #1447E0;
}

#back-to-list-button {
    left: 60px;
    position: fixed;
    top: 10px;
    z-index: 2147483647;
    opacity: 0.2;
    background: #1447E0;
}

.toolkit #back-to-list-button,
.toolkit #btn-edit-layout-mode {
    opacity: 1;
}

#back-to-list-button:hover,
#btn-edit-layout-mode:hover {
    opacity: 1;
}

#page-specs {
    color: #333;
    font-weight: bold;
    padding: 2px 8px;
    position: fixed;
    width: 100%;
    text-align: center;
    bottom: 0;
    z-index: 2147483647;
    display: none;
    background: #FFFFFF;
}

.toolkit #page-specs {
    display: block;
}

.block-container {
    display: block;
}

.block-wrapper {
    display: block;
    position: relative;
}

.block-disabled {
    display: none;
}

.toolkit .block-disabled {
    display: block;
    opacity: 0.5;
}

.toolkit .block-container {
    border: 2px dotted #D7E5F2;
    padding: 0 0 35px 0;
}

.toolkit .block-wrapper {
    /*min-height: 42px;*/
    min-height: 34px;
    /*background: rgba(165,255,75,0.7);*/
    border: 2px solid transparent;
    padding-top: 34px;
}

.toolkit .block-wrapper:hover {
    background: #EEE none repeat scroll 0 0;
    z-index: 200;
    border: 2px dotted #3C6FC1;
}

.block-wrapper-header {
    width: 100%;
    background: rgba(0,0,0,0.1);
    height: 35px;
    position: absolute;
    top: 0;
    display: none;
    z-index: 100;
}

.toolkit .block-wrapper:hover > .block-wrapper-header {
    display: block;
}

.toolkit .block-wrapper.edit-blocks,
.toolkit .block-wrapper.edit-content {
    min-height: 120px;
    z-index: 200;
    padding-top: 34px;
}

.toolkit .eight-list-decorator > .add-item {
    display: block;
}


.add-item:hover,
.add-item:hover {
    background-color: #ddd;
    text-decoration: none;
    color: #333;
}

.toolkit .block-wrapper:hover > .btn-remove-block,
.toolkit .block-wrapper:hover > .btn-edit-variable,
.toolkit .block-wrapper:hover > .btn-edit-block-layout,
.toolkit .block-wrapper:hover > .btn-sort-block,
.toolkit .block-wrapper:hover > .btn-enable-block,
.toolkit .block-wrapper:hover > .btn-disable-block {
    display: block;
}

.btn-edit-variable {
    position: absolute;
    top: 2px;
    right: 82px;
    z-index: 2147483647;
}

.btn-sort-block {
    position: absolute;
    top: 2px;
    right: 56px;
    z-index: 2147483647;
}

.btn-disable-block {
    position: absolute;
    top: 2px;
    right: 30px;
    z-index: 2147483647;
}

.btn-enable-block {
    position: absolute;
    top: 2px;
    right: 30px;
    z-index: 2147483647;
    background: #FFBBBB;
}

.btn-remove-block {
    position: absolute;
    top: 2px;
    right: 4px;
    z-index: 2147483647;
}

.block-label {
    color: #333;
    font-weight: bold;
    margin-top: 10px;
    padding: 0 8px;
    text-transform: uppercase;
    z-index: 2147483647;
}
/*
.toolkit .block-wrapper.edit-content > .block-label {
    bottom: 0;
    right: 0;
    top: auto;
    left: auto;
}*/

.block-wrapper > form {
    display: none;
    position: relative;
    z-index: 1000;
    width: 100%;
    height: 100%;
}

.toolkit .block-wrapper.edit-content > .block-wrapper-header,
.toolkit .block-wrapper.edit-content > a.btn {
    display: block;
}

.toolkit .block-wrapper.edit-content > form {
    display: block;
    padding: 20px;
    border: dashed 2px #1447E0;
}

.submit-block-edit {
    margin-top: 10px;
    width: 100%;
}

.submit-enable-block-edit {
    margin-top: 10px;
    width: 100%;
}

.block-label .tooltip-inner {
    max-width: 400px;
}

.eight-frame-side {
    width: 2px;
    position: absolute;
    background: #1447E0;
    z-index: 2147483647;
    display: none;
}

.eight-frame-bottom {
    height: 2px;
    background: #1447E0;
    position: absolute;
    display: none;
}

.eight-frame-title {
    height: 30px;
    border: solid 2px #1447E0;
    position: absolute;
    background: #FFF;
    z-index: 2147483647;
    text-align: center;
    text-transform: uppercase;
    line-height: 30px;
    color: #1447E0;
    font-weight: bold;
    display: none;
}

.eight-block-decorator {
    position: relative;
}

.add-item {
    background: #fff none repeat scroll 0 0;
    border: 2px solid #1447E0;
    border-radius: 1px;
    bottom: 0;
    display: none;
    font-weight: bold;
    padding: 4px 8px;
    position: absolute;
    right: 0;
    z-index: 100;
    color: #1447E0;
}

.eight-block-decorator .eight-ui-button {
    background: #fff none repeat scroll 0 0;
    border: 2px solid #1447E0;
    border-radius: 2px;
    padding: 2px 4px;
    color: #1447E0;
}

.eight-toolbar {
    position: absolute;
    height: 20px;
    position: absolute;
    z-index: 2147483647;
    display: none;
    right: 0;
    top: 0;
}

.toolkit .add-item,
.toolkit .eight-frame-element,
.toolkit .eight-frame-title,
.toolkit .eight-frame-side,
.toolkit .eight-frame-bottom,
.toolkit .eight-toolbar {
    display: block;
}

.toolkit .eight-list-decorator {
    padding-bottom: 40px;
    margin-bottom: 40px;
}

.modal-title {
    margin-right: 30px;
}

